--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -36,10 +36,11 @@ h1, h2, h3, h4 {
 }
 
 .post-form textarea, .post-form input {
-  color: #ffffff;
+  /* color: #ffffff;
   float: right;
-  font-size: 26pt;
+  font-size: 26px; */
   margin-right: 20px;
+  width: 100%
 }
 
 .post {
